--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1
+
 jobs:
   build:
     docker:
@@ -32,3 +33,8 @@ jobs:
         command: |
           . venv/bin/activate
           make lint
+
+workflows:
+  default:
+    jobs:
+      - build
